--- a/choose-packaging.html
+++ b/choose-packaging.html
@@ -85,6 +85,11 @@
 
                             <p class="item-price ml-auto">0 грн</p>
                         </li>
+
+                        <li class="item item__total show-mobile flex jc-between">
+                            <p class="total__title bold">Итого:</p>
+                            <p class="total__cost bold">1140 грн</p>
+                        </li>
                     </ul>
 
                     <div class="order__totals">
@@ -103,61 +108,25 @@
                 <div class="cards-list">
                     <div class="card--text" data-image="src/images/backgrounds/size-background.jpg">
                         <div class="card__header">
-                            <p class="h4 header__title">100 мл</p>
-                            <p class="header__subtitle">Испаряется от 3 до 6 мес</p>
+                            <p class="h4 header__title">Стандартная</p>
                         </div>
                         <div class="card-description">
-                            <p class="card-text"><span class="label">Стоимость:</span> от 650 грн. или от 3,6 грн за 1 день пахнущего помещения</p>
-                        </div>
-                    </div>
-
-                    <div class="card--text" data-image="src/images/packaging/bottle-200.jpg">
-                        <div class="card__header">
-                            <p class="h4 header__title">250 мл</p>
-                            <p class="header__subtitle">Испаряется от 6 до 15 мес</p>
-                        </div>
-                        <div class="card-description">
-                            <p class="card-text"><span class="label">Стоимость:</span> от 1150 грн. или от 2,1 грн/день
-                            </p>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         </div>
                     </div>
 
                     <div class="card--text">
                         <div class="card__header">
-                            <p class="h4 header__title">500 мл</p>
-                            <p class="header__subtitle">Испаряется от 1 до 2,5 лет</p>
+                            <p class="h4 header__title">Подарочная</p>
+                            <p class="header__subtitle">+ 100 грн</p>
                         </div>
                         <div class="card-description">
-                            <p class="card-text"><span class="label">Стоимость:</span> от 1150 грн. или от 2,1 грн/день
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="card--text">
-                        <div class="card__header">
-                            <p class="h4 header__title">1000 мл</p>
-                            <p class="header__subtitle">Испаряется от 2,5 до 5 лет</p>
-                        </div>
-                        <div class="card-description">
-                            <p class="card-text"><span class="label">Стоимость:</span> от 1150 грн. или от 2,1 грн/день
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="card--text">
-                        <div class="card__header">
-                            <p class="h4 header__title">2000 мл</p>
-                            <p class="header__subtitle">Испаряется от 5 до 10 лет</p>
-                        </div>
-                        <div class="card-description">
-                            <p class="card-text"><span class="label">Стоимость:</span> от 1150 грн. или от 2,1 грн/день
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                             </p>
                         </div>
                     </div>
                 </div>
-                
             </div>
-            
         </div>
 
         <footer class="footer">
