--- a/choose-size.html
+++ b/choose-size.html
@@ -89,9 +89,12 @@
 
 
             <div class="choose">
-                <h3 class="h4">Выберите объем</h3>
+                <div class="choose__header">
+                    <h3 class="h4">Выберите объем</h3>
 
-                <p class="found-title">Найдено:<span class="found-count">5</span> объемов</p>
+                    <p class="found-title">Найдено:<span class="found-count">5</span> объемов</p>
+                </div>
+                
 
                 <div class="cards-list">
                     <div class="card--text" data-image="src/images/backgrounds/size-background.jpg">
