debug almost complete, commit before preview

--- a/checkout.html
+++ b/checkout.html
@@ -329,7 +329,7 @@
                                 </div>
                             </div>
                             
-                            <div class="custom-select custom-select--checkout grid-item another-address shipping">
+                            <div class="custom-select custom-select--checkout grid-item another-address address-delivery shipping">
                                 <div class="select-arrow">
                                     <div class="line--dark"></div>
                                     <div class="line--dark"></div>
@@ -345,7 +345,7 @@
                                 </div>
                             </div>
         
-                            <div class="custom-select custom-select--checkout grid-item pickup another-address shipping">
+                            <div class="custom-select custom-select--checkout grid-item pickup another-address address-delivery shipping">
                                 <div class="select-arrow">
                                     <div class="line--dark"></div>
                                     <div class="line--dark"></div>
@@ -419,9 +419,9 @@
                                 </div>
                             </div>
 
-                            <div class="checkbox-wrapper grid-item shipping">
+                            <div class="checkbox-wrapper grid-item shipping address-delivery">
                                 <input 
-                                    type="radio" 
+                                    type="checkbox" 
                                     class="form-radio" 
                                     name="shipping-address" 
                                     id="address-delivery" 
@@ -429,7 +429,7 @@
                                     data-filter=".address-delivery"
                                     >
                                 <span class="custom-checkbox"></span>
-                                <label for="pickup" class="custom-label" >Нужна адресная доставка</label>
+                                <label for="address-delivery" class="custom-label" >Нужна адресная доставка</label>
                             </div>
                         </div>
                     </fieldset>
