--- a/shop-catalog.html
+++ b/shop-catalog.html
@@ -13,8 +13,114 @@
     <title>Votre</title>
 </head>
 <body class="shop shop-catalog">
-
     <div id="overlay"></div>
+
+    <div class="navigation-menu">
+        <div class="menu__header">
+            <button class="btn-close btn-reset" id="btn-navigation-close"><span class="line--md"></span><span class="line--md"></span></button>
+
+            <ul class="menu__socials">
+                <li class="item">
+                    <a href="" class="item-link">Instagram</a>
+                </li>
+
+                <li class="item">
+                    <a href="" class="item-link">Facebook</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="menu__content">
+            <ul class="accordion animate-this">
+                <li class="item">
+                    <div class="outer-accordion-item flex jc-between ai-center">
+                        <a href="" class="item-link">Ароматы</a>
+                        <button class="btn btn-reset btn-accordion">
+                            <span class="line"></span>
+                            <span class="line"></span>
+                        </button>
+                    </div>
+
+                    <ul class="inner-accordion-items">
+                        <li class="item">
+                            <a class="item-link" href="">Женские</a>
+                        </li>
+
+                        <li class="item">
+                            <a class="item-link" href="">Мужские</a>
+                        </li>
+
+                        <li class="item">
+                            <a class="item-link" href="">Унисекс</a>
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="item">
+                    <div class="outer-accordion-item flex jc-between ai-center">
+                        <a href="" class="item-link">Афродизиаки</a>
+                        <button class="btn btn-reset btn-accordion">
+                            <span class="line"></span>
+                            <span class="line"></span>
+                        </button>
+                    </div>
+
+                    <ul class="inner-accordion-items">
+                        <li class="item">
+                            <a class="item-link" href="">Женские</a>
+                        </li>
+
+                        <li class="item">
+                            <a class="item-link" href="">Мужские</a>
+                        </li>
+
+                        <li class="item">
+                            <a class="item-link" href="">Унисекс</a>
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="item">
+                    <a href="" class="item-link">Home-ароматы</a>
+                </li>
+
+                <li class="item">
+                    <a href="" class="item-link">Каминные свечи</a>
+                </li>
+
+                <li class="item">
+                    <a href="" class="item-link">Подарки</a>
+                </li>
+
+                <li class="item">
+                    <a href="" class="item-link">Сотрудничество</a>
+                </li>
+
+                <li class="item">
+                    <a href="" class="item-link">Блог</a>
+                </li>
+            </ul>
+        </div>
+        <div class="menu__footer">
+            <div class="translations">
+                <ul class="translations-list">
+                    <li class="item">
+                        <a href="" class="item-link current">Ru</a>
+                    </li>
+
+                    <li class="item">
+                        <a href="" class="item-link">Uk</a>
+                    </li>
+
+                    <li class="item">
+                        <a href="" class="item-link">En</a>
+                    </li>
+                </ul>
+            </div>
+
+            <button class="btn-dark btn-lg w-100 show-mobile nav-btn">Смотреть коллекцию</button>
+        </div>
+    </div>
 
     <div class="mobile__catalog-bar filter-controls">
         <div class="bar__body">
@@ -1077,7 +1183,118 @@
                     <div class="card__like">
                         <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M13.6387 2.19817C13.3129 1.87118 12.9261 1.61179 12.5003 1.43481C12.0746 1.25784 11.6183 1.16675 11.1574 1.16675C10.6966 1.16675 10.2402 1.25784 9.81449 1.43481C9.38874 1.61179 9.00192 1.87118 8.67613 2.19817L7.99999 2.87647L7.32386 2.19817C6.66578 1.53798 5.77323 1.16709 4.84257 1.16709C3.9119 1.16709 3.01936 1.53798 2.36128 2.19817C1.7032 2.85835 1.3335 3.75376 1.3335 4.6874C1.3335 5.62105 1.7032 6.51645 2.36128 7.17664L3.03741 7.85494L7.99999 12.8334L12.9626 7.85494L13.6387 7.17664C13.9646 6.8498 14.2232 6.46175 14.3996 6.03463C14.576 5.60752 14.6668 5.14973 14.6668 4.6874C14.6668 4.22508 14.576 3.76728 14.3996 3.34017C14.2232 2.91306 13.9646 2.525 13.6387 2.19817V2.19817Z" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+                </div>
+
+                <div class="card--recommended">
+                    <div class="card__preview">
+                        <img src="src/images/flavors/flavor-big.jpg" alt="">
+                    </div>
+                    <div class="card__description">
+                        <p class="h4 card__title">Autograph</p>
+                        <p class="card__subtitle">Eau de parfume</p>
+
+                        <p class="price__quantity">1200 грн</p>
+                    </div>
+
+                    <div class="custom-select custom-select--card">
+                        <div class="select-arrow">
+                            <div class="line--dark"></div>
+                            <div class="line--dark"></div>
+                        </div>
+
+                        <input type="text" class="custom-celect__input" placeholder="16 мл" readonly>
+                        <div class="custom-select__options">
+                            <ul class="option__items">
+                                <li class="item">16 мл</li>
+                                <li class="item">50 мл</li>
+                                <li class="item">100 мл</li>
+                                <li class="item">250 мл</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <button class="btn-dark w-100 card__btn-buy">Купить</button>
+
+                    <div class="card__like">
+                        <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M13.6387 2.19817C13.3129 1.87118 12.9261 1.61179 12.5003 1.43481C12.0746 1.25784 11.6183 1.16675 11.1574 1.16675C10.6966 1.16675 10.2402 1.25784 9.81449 1.43481C9.38874 1.61179 9.00192 1.87118 8.67613 2.19817L7.99999 2.87647L7.32386 2.19817C6.66578 1.53798 5.77323 1.16709 4.84257 1.16709C3.9119 1.16709 3.01936 1.53798 2.36128 2.19817C1.7032 2.85835 1.3335 3.75376 1.3335 4.6874C1.3335 5.62105 1.7032 6.51645 2.36128 7.17664L3.03741 7.85494L7.99999 12.8334L12.9626 7.85494L13.6387 7.17664C13.9646 6.8498 14.2232 6.46175 14.3996 6.03463C14.576 5.60752 14.6668 5.14973 14.6668 4.6874C14.6668 4.22508 14.576 3.76728 14.3996 3.34017C14.2232 2.91306 13.9646 2.525 13.6387 2.19817V2.19817Z" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+                </div>
+
+                <div class="card--recommended">
+                    <div class="card__preview">
+                        <img src="src/images/flavors/flavor-big.jpg" alt="">
+                    </div>
+                    <div class="card__description">
+                        <p class="h4 card__title">Autograph</p>
+                        <p class="card__subtitle">Eau de parfume</p>
+
+                        <p class="price__quantity">1200 грн</p>
+                    </div>
+
+                    <div class="custom-select custom-select--card">
+                        <div class="select-arrow">
+                            <div class="line--dark"></div>
+                            <div class="line--dark"></div>
+                        </div>
+
+                        <input type="text" class="custom-celect__input" placeholder="16 мл" readonly>
+                        <div class="custom-select__options">
+                            <ul class="option__items">
+                                <li class="item">16 мл</li>
+                                <li class="item">50 мл</li>
+                                <li class="item">100 мл</li>
+                                <li class="item">250 мл</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <button class="btn-dark w-100 card__btn-buy">Купить</button>
+
+                    <div class="card__like">
+                        <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M13.6387 2.19817C13.3129 1.87118 12.9261 1.61179 12.5003 1.43481C12.0746 1.25784 11.6183 1.16675 11.1574 1.16675C10.6966 1.16675 10.2402 1.25784 9.81449 1.43481C9.38874 1.61179 9.00192 1.87118 8.67613 2.19817L7.99999 2.87647L7.32386 2.19817C6.66578 1.53798 5.77323 1.16709 4.84257 1.16709C3.9119 1.16709 3.01936 1.53798 2.36128 2.19817C1.7032 2.85835 1.3335 3.75376 1.3335 4.6874C1.3335 5.62105 1.7032 6.51645 2.36128 7.17664L3.03741 7.85494L7.99999 12.8334L12.9626 7.85494L13.6387 7.17664C13.9646 6.8498 14.2232 6.46175 14.3996 6.03463C14.576 5.60752 14.6668 5.14973 14.6668 4.6874C14.6668 4.22508 14.576 3.76728 14.3996 3.34017C14.2232 2.91306 13.9646 2.525 13.6387 2.19817V2.19817Z" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg> 
+                    </div>
+                </div>
+
+                <div class="card--recommended">
+                    <div class="card__preview">
+                        <img src="src/images/flavors/flavor-big.jpg" alt="">
+                    </div>
+                    <div class="card__description">
+                        <p class="h4 card__title">Autograph</p>
+                        <p class="card__subtitle">Eau de parfume</p>
+
+                        <p class="price__quantity">1200 грн</p>
+                    </div>
+
+                    <div class="custom-select custom-select--card">
+                        <div class="select-arrow">
+                            <div class="line--dark"></div>
+                            <div class="line--dark"></div>
+                        </div>
+
+                        <input type="text" class="custom-celect__input" placeholder="16 мл" readonly>
+                        <div class="custom-select__options">
+                            <ul class="option__items">
+                                <li class="item">16 мл</li>
+                                <li class="item">50 мл</li>
+                                <li class="item">100 мл</li>
+                                <li class="item">250 мл</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <button class="btn-dark w-100 card__btn-buy">Купить</button>
+
+                    <div class="card__like">
+                        <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M13.6387 2.19817C13.3129 1.87118 12.9261 1.61179 12.5003 1.43481C12.0746 1.25784 11.6183 1.16675 11.1574 1.16675C10.6966 1.16675 10.2402 1.25784 9.81449 1.43481C9.38874 1.61179 9.00192 1.87118 8.67613 2.19817L7.99999 2.87647L7.32386 2.19817C6.66578 1.53798 5.77323 1.16709 4.84257 1.16709C3.9119 1.16709 3.01936 1.53798 2.36128 2.19817C1.7032 2.85835 1.3335 3.75376 1.3335 4.6874C1.3335 5.62105 1.7032 6.51645 2.36128 7.17664L3.03741 7.85494L7.99999 12.8334L12.9626 7.85494L13.6387 7.17664C13.9646 6.8498 14.2232 6.46175 14.3996 6.03463C14.576 5.60752 14.6668 5.14973 14.6668 4.6874C14.6668 4.22508 14.576 3.76728 14.3996 3.34017C14.2232 2.91306 13.9646 2.525 13.6387 2.19817V2.19817Z" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
                     </div>
                 </div>
 
@@ -1115,6 +1332,43 @@
                         <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M13.6387 2.19817C13.3129 1.87118 12.9261 1.61179 12.5003 1.43481C12.0746 1.25784 11.6183 1.16675 11.1574 1.16675C10.6966 1.16675 10.2402 1.25784 9.81449 1.43481C9.38874 1.61179 9.00192 1.87118 8.67613 2.19817L7.99999 2.87647L7.32386 2.19817C6.66578 1.53798 5.77323 1.16709 4.84257 1.16709C3.9119 1.16709 3.01936 1.53798 2.36128 2.19817C1.7032 2.85835 1.3335 3.75376 1.3335 4.6874C1.3335 5.62105 1.7032 6.51645 2.36128 7.17664L3.03741 7.85494L7.99999 12.8334L12.9626 7.85494L13.6387 7.17664C13.9646 6.8498 14.2232 6.46175 14.3996 6.03463C14.576 5.60752 14.6668 5.14973 14.6668 4.6874C14.6668 4.22508 14.576 3.76728 14.3996 3.34017C14.2232 2.91306 13.9646 2.525 13.6387 2.19817V2.19817Z" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg> 
+                    </div>
+                </div>
+
+                <div class="card--recommended">
+                    <div class="card__preview">
+                        <img src="src/images/flavors/flavor-big.jpg" alt="">
+                    </div>
+                    <div class="card__description">
+                        <p class="h4 card__title">Autograph</p>
+                        <p class="card__subtitle">Eau de parfume</p>
+
+                        <p class="price__quantity">1200 грн</p>
+                    </div>
+
+                    <div class="custom-select custom-select--card">
+                        <div class="select-arrow">
+                            <div class="line--dark"></div>
+                            <div class="line--dark"></div>
+                        </div>
+
+                        <input type="text" class="custom-celect__input" placeholder="16 мл" readonly>
+                        <div class="custom-select__options">
+                            <ul class="option__items">
+                                <li class="item">16 мл</li>
+                                <li class="item">50 мл</li>
+                                <li class="item">100 мл</li>
+                                <li class="item">250 мл</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <button class="btn-dark w-100 card__btn-buy">Купить</button>
+
+                    <div class="card__like">
+                        <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M13.6387 2.19817C13.3129 1.87118 12.9261 1.61179 12.5003 1.43481C12.0746 1.25784 11.6183 1.16675 11.1574 1.16675C10.6966 1.16675 10.2402 1.25784 9.81449 1.43481C9.38874 1.61179 9.00192 1.87118 8.67613 2.19817L7.99999 2.87647L7.32386 2.19817C6.66578 1.53798 5.77323 1.16709 4.84257 1.16709C3.9119 1.16709 3.01936 1.53798 2.36128 2.19817C1.7032 2.85835 1.3335 3.75376 1.3335 4.6874C1.3335 5.62105 1.7032 6.51645 2.36128 7.17664L3.03741 7.85494L7.99999 12.8334L12.9626 7.85494L13.6387 7.17664C13.9646 6.8498 14.2232 6.46175 14.3996 6.03463C14.576 5.60752 14.6668 5.14973 14.6668 4.6874C14.6668 4.22508 14.576 3.76728 14.3996 3.34017C14.2232 2.91306 13.9646 2.525 13.6387 2.19817V2.19817Z" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
                     </div>
                 </div>
 
