add blog, post, login, register pages, cooperation

--- a/shop-home.html
+++ b/shop-home.html
@@ -1655,8 +1655,6 @@
                     </li>
                 </ul>
 
-                
-
                 <div class="grid-item contacts">
                     <a href="email:info@votre.com.ua" class="email contacts-link">info@votre.com.ua</a>
                     <a href="tel:+38 (066) 992 14 44" class="contacts-link phone">+38 (066) 992 14 44</a>
@@ -1675,6 +1673,6 @@
 <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
 <script src="https://npmcdn.com/isotope-horizontal@2/horizontal.js"></script>
     <script src="dist/bundle.js"></script>
-</div>
-<!-- </body> -->
+
+ </body>
 </html>
