--- a/shop-single-product.html
+++ b/shop-single-product.html
@@ -17,12 +17,12 @@
 
     <div class="modal modal--auth">
         <div class="modal__head">
-            <p class="modal__title">Пожалуйста, авторизуйтесь</p>
             <button class="btn-close btn-reset" id="btnCloseModalAuth"><span class="line--md"></span><span class="line--md"></span></button>
+            <p class="modal__title">Пожалуйста, авторизуйтесь</p>
         </div>
         <div class="modal__body">
-            <button class="btn-dark btn-lg w-100" type="button">Войти</button>
-            <button class="btn-ouline-primary w-100" type="button">Зарегестрироваться</button>
+            <button class="btn-login btn-dark btn-md w-100" type="button">Войти</button>
+            <button class="btn-register btn-ouline-primary btn-md w-100" type="button">Зарегистрироваться</button>
         </div>
     </div>
 
