--- a/shop-home.html
+++ b/shop-home.html
@@ -683,8 +683,6 @@
                 </div>
 
                 <div class="gift-slider">
-                    <!-- <div class="grid-sizer"></div>
-                    <div class="gutter-sizer"></div> -->
                     <div class="card card--simple perfume">
                         <div class="card__body">
                             <div class="card__preview">
@@ -1266,12 +1264,33 @@
 
     <section class="section section-invite">
         <div class="container">
-            <h3 class="section__title heading-increment">
-                Приглашаем на ароматную дегустации
-                в бутики Votre  
-            </h3>
 
-            <div class="slider--snap store-slider">
+            <div class="section__head">
+                <h3 class="section__title heading-increment">
+                    Приглашаем на ароматную дегустации
+                    в бутики Votre
+                </h3>
+
+                <div class="custom-select">
+                    <div class="select-arrow">
+                        <div class="line--dark"></div>
+                        <div class="line--dark"></div>
+                    </div>
+
+                    <input type="text" class="custom-celect__input" id="input-city" placeholder="Город">
+                    <div class="custom-select__options">
+                        <input type="text" class="form-input input-search" placeholder="Поиск">
+                        <ul class="option__items">
+                            <li class="item">Киев</li>
+                            <li class="item">Шир</li>
+                            <li class="item">Готэм</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="store-slider">
                 <div class="store__slide item">
                     <div class="slide__header">
                         <p class="slide__title">
@@ -1336,6 +1355,50 @@
                     <a href="" class="btn-link btn-outline-primary">
                         Показать магазин на карте
                     </a> 
+                </div>
+
+                <div class="store__slide item">
+                    <div class="slide__header">
+                        <p class="slide__title">
+                            Бутик нишевой парфюмерии Votre
+                        </p>
+
+                        <span class="icon-info"></span>
+                    </div>
+
+                    <div class="slide__preview">
+                        <img src="src/images/shop/home-page/store.jpg" alt="">
+                    </div>
+
+                    <p class="slide__description">
+                        Бесконечное количество нишевых марок. Люксовая парфюмерия. Французские духи Bibliotheque de Parfum и украинские Votre Parfum. Декоративная косметика Pupa, Artdeco, L`oreal и т.д. #уходдляволос Ellips, Matrix и др.. Уходовая косметика для лица и тела Satara и Tesori d`Oriente
+                    </p>
+
+                    <a href="" class="btn-link btn-outline-primary">
+                        Показать магазин на карте
+                    </a>
+                </div>
+
+                <div class="store__slide item">
+                    <div class="slide__header">
+                        <p class="slide__title">
+                            Бутик нишевой парфюмерии Votre
+                        </p>
+
+                        <span class="icon-info"></span>
+                    </div>
+
+                    <div class="slide__preview">
+                        <img src="src/images/shop/home-page/store.jpg" alt="">
+                    </div>
+
+                    <p class="slide__description">
+                        Бесконечное количество нишевых марок. Люксовая парфюмерия. Французские духи Bibliotheque de Parfum и украинские Votre Parfum. Декоративная косметика Pupa, Artdeco, L`oreal и т.д. #уходдляволос Ellips, Matrix и др.. Уходовая косметика для лица и тела Satara и Tesori d`Oriente
+                    </p>
+
+                    <a href="" class="btn-link btn-outline-primary">
+                        Показать магазин на карте
+                    </a>
                 </div>
             </div>
         </div>
@@ -1468,7 +1531,35 @@
                 </div>
             </div>
 
-            <div class="slider--snap slider-addresses">
+            <div class="slider-addresses">
+                <div class="item">
+                    <p class="item__shop">
+                        Свадебный салон “Sherri Hill”
+                    </p>
+
+                    <p class="item__address">
+                        г. Харьков, ул. Сумская 53
+                    </p>
+
+                    <a href="tel:+38 (050) 406 60 50" class="item__phone">
+                        +38 (050) 406 60 50
+                    </a>
+                </div>
+
+                <div class="item">
+                    <p class="item__shop">
+                        Свадебный салон “Sherri Hill”
+                    </p>
+
+                    <p class="item__address">
+                        г. Харьков, ул. Сумская 53
+                    </p>
+
+                    <a href="tel:+38 (050) 406 60 50" class="item__phone">
+                        +38 (050) 406 60 50
+                    </a>
+                </div>
+
                 <div class="item">
                     <p class="item__shop">
                         Свадебный салон “Sherri Hill”
@@ -1520,7 +1611,7 @@
                 Votre Parfum - жизнь за кулисами  
             </h3>
 
-            <div class="slider--snap blog-slider">
+            <div class="blog-slider">
                 <div class="card--post item">
                     <div class="post__preview">
                         <img src="src/images/shop/home-page/store.jpg" alt="">
@@ -1538,7 +1629,7 @@
                         27.01.2020
                     </p>
 
-                    <a href="" class="btn-link btn-outline-primary">
+                    <a href="blog.html" class="btn-link btn-outline-primary">
                         Подробнее
                     </a> 
                 </div>
@@ -1585,6 +1676,50 @@
                     <a href="" class="btn-link btn-outline-primary">
                         Подробнее
                     </a> 
+                </div>
+
+                <div class="card--post item">
+                    <div class="post__preview">
+                        <img src="src/images/shop/home-page/store.jpg" alt="">
+                    </div>
+
+                    <h5 class="post__title">
+                        Открытие нового бутика Votre Parfum
+                    </h5>
+
+                    <p class="post__body">
+                        49 парфюмерных брендов. Ароматы на распив от 5 мл и 150 грн. Любимый французский бренд Bibliotheque de Parfum и украинский Votre Parfum. Уходовая косметика Satara и Tesori d`Oriente. Шикарный уход для волос от Ellips
+                    </p>
+
+                    <p class="post__date">
+                        27.01.2020
+                    </p>
+
+                    <a href="" class="btn-link btn-outline-primary">
+                        Подробнее
+                    </a>
+                </div>
+
+                <div class="card--post item">
+                    <div class="post__preview">
+                        <img src="src/images/shop/home-page/store.jpg" alt="">
+                    </div>
+
+                    <h5 class="post__title">
+                        Открытие нового бутика Votre Parfum
+                    </h5>
+
+                    <p class="post__body">
+                        49 парфюмерных брендов. Ароматы на распив от 5 мл и 150 грн. Любимый французский бренд Bibliotheque de Parfum и украинский Votre Parfum. Уходовая косметика Satara и Tesori d`Oriente. Шикарный уход для волос от Ellips
+                    </p>
+
+                    <p class="post__date">
+                        27.01.2020
+                    </p>
+
+                    <a href="" class="btn-link btn-outline-primary">
+                        Подробнее
+                    </a>
                 </div>
             </div>
 
