--- a/shop-single-product.html
+++ b/shop-single-product.html
@@ -446,6 +446,10 @@
                     </div>
                 </div>
             </div>
+            <div class="product-preview__controls hide">
+                <button class="btn-reset btn-link btn-prev" id="btnZoomOff">Назад</button>
+            </div>
+
 
             <div class="hero__buy">
                 <p class="buy__title-price">1 200 грн</p>
@@ -680,8 +684,8 @@
     <div class="section-recommended">
         <div class="container">
             <h3 class="h3 recommended__title">Специальные предложения для Вас</h3>
-            <div class="recommended__product-list slider">
-                <div class="card card--product">
+            <div class="recommended__product-list">
+                <div class="card--product">
                     <div class="card__body">
                         <div class="card__preview">
                             <img src="src/images/flavors/flavor-big.jpg" alt="">
@@ -720,7 +724,7 @@
                     </div>
                 </div>
 
-                <div class="card card--product">
+                <div class="card--product">
                     <div class="card__body">
                         <div class="card__preview">
                             <img src="src/images/flavors/flavor-big.jpg" alt="">
@@ -759,7 +763,7 @@
                     </div>
                 </div>
 
-                <div class="card card--product">
+                <div class="card--product">
                     <div class="card__body">
                         <div class="card__preview">
                             <img src="src/images/flavors/flavor-big.jpg" alt="">
@@ -798,7 +802,7 @@
                     </div>
                 </div>
 
-                <div class="card card--product">
+                <div class="card--product">
                     <div class="card__body">
                         <div class="card__preview">
                             <img src="src/images/flavors/flavor-big.jpg" alt="">
@@ -837,7 +841,7 @@
                     </div>
                 </div>
 
-                <div class="card card--product">
+                <div class="card--product">
                     <div class="card__body">
                         <div class="card__preview">
                             <img src="src/images/flavors/flavor-big.jpg" alt="">
@@ -876,7 +880,7 @@
                     </div>
                 </div>
 
-                <div class="card--recommended hot">
+                <div class="card--product hot">
                     <div class="card__body">
                         <div class="card__preview">
                             <img src="src/images/flavors/flavor-big.jpg" alt="">
@@ -915,7 +919,7 @@
                     </div>
                 </div>
 
-                <div class="card--recommended hot">
+                <div class="card--product hot">
                     <div class="card__body">
                         <div class="card__preview">
                             <img src="src/images/flavors/flavor-big.jpg" alt="">
@@ -954,7 +958,7 @@
                     </div>
                 </div>
 
-                <div class="card--recommended hot">
+                <div class="card--product hot">
                     <div class="card__body">
                         <div class="card__preview">
                             <img src="src/images/flavors/flavor-big.jpg" alt="">
@@ -1000,7 +1004,7 @@
         <div class="container">
             <h3 class="h3 recommended__title">Новая продукция</h3>
             <div class="recommended__product-list slider--new-products">
-                <div class="card card--product">
+                <div class="card--product">
                     <div class="card__body">
                         <div class="card__preview">
                             <img src="src/images/flavors/flavor-big.jpg" alt="">
@@ -1039,7 +1043,7 @@
                     </div>
                 </div>
 
-                <div class="card card--product">
+                <div class="card--product">
                     <div class="card__body">
                         <div class="card__preview">
                             <img src="src/images/flavors/flavor-big.jpg" alt="">
@@ -1078,7 +1082,7 @@
                     </div>
                 </div>
 
-                <div class="card card--product">
+                <div class="card--product">
                     <div class="card__body">
                         <div class="card__preview">
                             <img src="src/images/flavors/flavor-big.jpg" alt="">
@@ -1117,7 +1121,7 @@
                     </div>
                 </div>
 
-                <div class="card card--product">
+                <div class="card--product">
                     <div class="card__body">
                         <div class="card__preview">
                             <img src="src/images/flavors/flavor-big.jpg" alt="">
@@ -1156,7 +1160,7 @@
                     </div>
                 </div>
 
-                <div class="card card--product">
+                <div class="card--product">
                     <div class="card__body">
                         <div class="card__preview">
                             <img src="src/images/flavors/flavor-big.jpg" alt="">
@@ -1195,7 +1199,7 @@
                     </div>
                 </div>
 
-                <div class="card card--product">
+                <div class="card--product">
                     <div class="card__body">
                         <div class="card__preview">
                             <img src="src/images/flavors/flavor-big.jpg" alt="">
@@ -1234,7 +1238,7 @@
                     </div>
                 </div>
 
-                <div class="card card--product">
+                <div class="card--product">
                     <div class="card__body">
                         <div class="card__preview">
                             <img src="src/images/flavors/flavor-big.jpg" alt="">
@@ -1273,7 +1277,7 @@
                     </div>
                 </div>
 
-                <div class="card card--product">
+                <div class="card--product">
                     <div class="card__body">
                         <div class="card__preview">
                             <img src="src/images/flavors/flavor-big.jpg" alt="">
@@ -1312,7 +1316,7 @@
                     </div>
                 </div>
 
-                <div class="card card--product">
+                <div class="card--product">
                     <div class="card__body">
                         <div class="card__preview">
                             <img src="src/images/flavors/flavor-big.jpg" alt="">
@@ -1361,7 +1365,7 @@
 
             <div class="feedback__title show-mobile">Отзыв  о товаре Morning’s not soon</div>
 
-            <button class="btn-leave-comment btn-outline-primary btn-md w-100" type="button">Оставить отзывы</button>
+            <button class="btn-leave-comment show-mobile btn-outline-primary btn-md w-100" type="button">Оставить отзывы</button>
 
             <ul class="feedback__tabs tabs-list">
                 <button type="button" class="btn-tab comments active">Комментарии</button>
